# DevOps-Course-Starter

./: .dockerignore  .env.test  .gitignore  Dockerfile  README.md  Vagrantfile  gunicorn_config.py  logs.txt  pyproject.toml
.github/workflows/: Excercise7.yml  main.yml
Excercise6/: Untitled Diagram.drawio
todo_app/: Item.py  app.py  flask_config.py  trello_items.py  view_model.py
todo_app/data/: session_items.py
todo_app/end_to_end_test/: test_selenium.py
todo_app/templates/: index.html
todo_app/test/: test_integration.py  test_selenium.py  test_view_model.py
